@@ -5433,7 +5433,7 @@ System status metrics, like CPU and memory usage, that are collected from the op
 [float]
 == core Fields
 
-`system-core` contains local CPU core stats.
+`system-core` contains CPU metrics for a single core of a multi-core system.
 
 
 
@@ -5452,7 +5452,7 @@ type: scaled_float
 
 format: percent
 
-The percentage of CPU time spent in user space. On multi-core systems, you can have percentages that are greater than 100%. For example, if 3 cores are at 60% use, then the `cpu.user_p` will be 180%.
+The percentage of CPU time spent in user space.
 
 
 [float]
